--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Road Filmes</title>
 </head>
-<body>
+<body style="background: #8B0000">
 <ul>
-    <img src="logo1.png"> <img src="propaganda.jpg"><br>
-    <li><a href="cinema.com">Cinema</a></li>
-    <li><a href="filmes.com">Filmes</a></li>
-    <li><a href="salas.com">Cinemas e Salas</a></li>
-    <li><a href="promocoes.com">Promoções</a></li>
-    <li><a href="ingressos.com">Ingressos</a></li>
-    <li><a href="produtos.com">Produtos</a></li>
+    <img src="imagens/logo/logo1.png"> <img src="imagens/propaganda.jpg"><br>
+    <li><a href="cinema.com" style="color: #FFD700">Cinema</a></li>
+    <li><a href="filmes.com" style="color: #FFD700">Filmes</a></li>
+    <li><a href="salas.com" style="color: #FFD700">Cinemas e Salas</a></li>
+    <li><a href="promocoes.com" style="color: #FFD700">Promoções</a></li>
+    <li><a href="ingressos.com" style="color: #FFD700">Ingressos</a></li>
+    <li><a href="produtos.com" style="color: #FFD700">Produtos</a></li>
 </ul>
 <select>
 <option>Cidade</option>
@@ -24,27 +24,27 @@
 <select>
     <option>Filme</option>
 </select>
-<a href="facebook.com"><img src="facebook.png"></a>
-<a href="twitter.com"><img src="twitter.png"></a>
-<a href="instagram.com"><img src="instagram.png"></a><br>
-<img src="(1).jpg" width="23%" height="40%"/>
-<img src="(2).jpg" width="23%" height="40%"/>
-<img src="(3).jpg" width="23%" height="40%"/>
-<img src="(4).jpg" width="23%" height="40%"/><br>
+<a href="facebook.com"><img src="imagens/icons/facebook.png"></a>
+<a href="twitter.com"><img src="imagens/icons/twitter.png"></a>
+<a href="instagram.com"><img src="imagens/icons/instagram.png"></a><br>
+<img src="imagens/cartazes/(1).jpg" width="23%" height="40%"/>
+<img src="imagens/cartazes/(2).jpg" width="23%" height="40%"/>
+<img src="imagens/cartazes/(3).jpg" width="23%" height="40%"/>
+<img src="imagens/cartazes/(4).jpg" width="23%" height="40%"/><br>
 
-<h2>Estreias</h2>
+<h2 style="color: #00FF00;border-bottom: 3px solid black; width: 200px; text-align: center;"">Estreias</h2>
 <ul>
-    <li><img src="1.jpg" width="11%" height="20%"><a href="turma-monica.html">TURMA DA MÔNICA- LAÇOS</a></li>
-    <li><img src="2.jpg" width="11%" height="20%"><a href="metallica.html">METALICA & SAN FRANCISCO SYMPHONY S&M2 </a></li>
-    <li><img src="3.jpg" width="11%" height="20%"><a href="as-panteras.html">AS PANTERAS</a></li>
-    <li><img src="4.jpg" width="11%" height="20%"><a href="it-2.html">IT A COISA - CAPITULO 2</a></li>
+    <li><img src="imagens/filmes/1.jpg" width="11%" height="20%"><a href="turma-monica.html" style="color:  #FFD700">TURMA DA MÔNICA- LAÇOS</a></li>
+    <li><img src="imagens/filmes/2.jpg" width="11%" height="20%"><a href="metallica.html" style="color:  #FFD700">METALICA & SAN FRANCISCO SYMPHONY S&M2 </a></li>
+    <li><img src="imagens/filmes/3.jpg" width="11%" height="20%"><a href="as-panteras.html" style="color:  #FFD700">AS PANTERAS</a></li>
+    <li><img src="imagens/filmes/4.jpg" width="11%" height="20%"><a href="it-2.html" style="color:  #FFD700">IT A COISA - CAPITULO 2</a></li>
 </ul>
-<h2>Em Breve</h2>
+<h2 style="color: #00FF00;border-bottom: 3px solid black; width: 200px; text-align: center;">Em Breve</h2>
 <ul>
-    <li><img src="5.jpg" width="11%" height="20%"><a href="abominavel.html">ABOMINÁVEL</a></li>
-    <li><img src="6.jpg" width="11%" height="20%"><a href="coringa.html">CORINGA</a></li>
-    <li><img src="7.jpg" width="11%" height="20%"><a href="yesterday.html">YESTERDAY</a></li>
-    <li><img src="8.jpg" width="11%" height="20%"><a href="familia-addams.html">A FAMILIA ADDAMS</a></li>
+    <li><img src="imagens/filmes/5.jpg" width="11%" height="20%"><a href="abominavel.html" style="color:  #FFD700">ABOMINÁVEL</a></li>
+    <li><img src="imagens/filmes/6.jpg" width="11%" height="20%"><a href="coringa.html" style="color:  #FFD700">CORINGA</a></li>
+    <li><img src="imagens/filmes/7.jpg" width="11%" height="20%"><a href="yesterday.html" style="color:  #FFD700">YESTERDAY</a></li>
+    <li><img src="imagens/filmes/8.jpg" width="11%" height="20%"><a href="familia-addams.html" style="color:  #FFD700">A FAMILIA ADDAMS</a></li>
 </ul>
 
 
