--- a/coringa.html
+++ b/coringa.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-        <img src="logo1.png"> <img src="propaganda.jpg"><br>
+        <img src="imagens/logo/logo1.png"> <img src="imagens/propaganda.jpg"><br>
         <li><a href="cinema.com">Cinema</a></li>
         <li><a href="filmes.com">Filmes</a></li>
         <li><a href="salas.com">Cinemas e Salas</a></li>
@@ -28,7 +28,7 @@
         <a href="twitter.com"><img src="twitter.png"></a>
         <a href="instagram.com"><img src="instagram.png"></a><br>
     
-<img src="6.jpg" width="11%" height="20%"><br>
+<img src="imagens/filmes/6.jpg" width="11%" height="20%"><br>
     
 <h2>CORINGA</h2>
 
