--- a/turma-monica.html
+++ b/turma-monica.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <title>Turma-Da-Monica</title>
 </head>
-<body style=" background-image:url(imagens/fundo/monica.png ); background-size: cover; position: absolute; background-color: rgba(10, 23, 55,0.5); filter: 1;">
-       
+<body style=" background-image:url(imagens/fundo/monica.png );margin: 0px; margin-top: -15px; margin-bottom:-15px;">
+
+    <div style="background-color: rgba(255, 255, 255, 0.5)">
+
+<!-- background-size: cover; position: absolute;-->
+
      <ul>
         <img src="imagens/logo/logo1.png"> <img src="imagens/propaganda.jpg"><br>
-        <li><a href="cinema.com">Cinema</a></li>
-        <li><a href="filmes.com">Filmes</a></li>
-        <li><a href="salas.com">Cinemas e Salas</a></li>
-        <li><a href="promocoes.com">Promoções</a></li>
-        <li><a href="ingressos.com">Ingressos</a></li>
-        <li><a href="produtos.com">Produtos</a></li>
+        <li><a href="cinema.com" style="color: black; font-weight: bold">Cinema</a></li>
+        <li><a href="filmes.com " style="color: black; font-weight: bold">Filmes</a></li>
+        <li><a href="salas.com" style="color: black; font-weight: bold">Cinemas e Salas</a></li>
+        <li><a href="promocoes.com" style="color: black; font-weight: bold">Promoções</a></li>
+        <li><a href="ingressos.com" style="color: black; font-weight: bold">Ingressos</a></li>
+        <li><a href="produtos.com" style="color: black; font-weight: bold">Produtos</a></li>
     </ul>
     <select>
         <option>Cidade</option>
@@ -46,6 +50,6 @@
 
 <p><a href="index.html">Voltar</a></p>
 
-    
+    </div>
 </body>
 </html>
