--- a/yesterday.html
+++ b/yesterday.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <title>Yesterday</title>
 </head>
-<body>
+<body style="background-image:url(imagens/fundo/yesterday);margin: 0px; margin-top: -15px; margin-bottom:-15px;">
+
+    <div style="background-color: rgba(255, 255, 255, 0.5)">
+
      <ul>
-        <img src="logo1.png"> <img src="propaganda.jpg"><br>
-        <li><a href="cinema.com">Cinema</a></li>
-        <li><a href="filmes.com">Filmes</a></li>
-        <li><a href="salas.com">Cinemas e Salas</a></li>
-        <li><a href="promocoes.com">Promoções</a></li>
-        <li><a href="ingressos.com">Ingressos</a></li>
-        <li><a href="produtos.com">Produtos</a></li>
+        <img src="imagens/logo/logo1.png"> <img src="imagens/propaganda.jpg"><br>
+        <li><a href="cinema.com" style="color: black; font-weight: bold">Cinema</a></li>
+        <li><a href="filmes.com" style="color: black; font-weight: bold">Filmes</a></li>
+        <li><a href="salas.com" style="color: black; font-weight: bold">Cinemas e Salas</a></li>
+        <li><a href="promocoes.com" style="color: black; font-weight: bold">Promoções</a></li>
+        <li><a href="ingressos.com" style="color: black; font-weight: bold">Ingressos</a></li>
+        <li><a href="produtos.com" style="color: black; font-weight: bold">Produtos</a></li>
     </ul>
     <select>
         <option>Cidade</option>
@@ -24,11 +27,11 @@
     <select>
         <option>Filme</option>
     </select>
-        <a href="facebook.com"><img src="facebook.png"></a>
-        <a href="twitter.com"><img src="twitter.png"></a>
-        <a href="instagram.com"><img src="instagram.png"></a><br>
+        <a href="facebook.com"><img src="imagens/icons/facebook.png"></a>
+        <a href="twitter.com"><img src="imagens/icons/twitter.png"></a>
+        <a href="instagram.com"><img src="imagens/icons/instagram.png"></a><br>
     
-<img src="7.jpg" width="11%" height="20%"><br>
+<img src="imagens/filmes/7.jpg" width="11%" height="20%"><br>
     
 <h2>YESTERDAY</h2>
 
@@ -44,3 +47,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Yyk9N40uIFs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p><a href="index.html">Voltar</a></p>
+
+</div>
+</body>
+</html>
